test/sematest/invalid/comparison_operators8.java
class B {

}

class A {
  public static void main(String[] args) {
    new int[1] == 3;
  }
}